# advent-of-code

./: .gitignore  Cargo.toml
data/2020/day3/: slopes.txt
src/2020/day1/: report_repair.py  report_repair.rs
src/2020/day10/: adapter_array.py
src/2020/day11/: seating_system.py
src/2020/day12/: rain_risk.py
src/2020/day13/: shuttle_search.py
src/2020/day14/: docking_data.py
src/2020/day15/: rambunctious_recitation.py
src/2020/day16/: ticket_translation.py
src/2020/day17/: conway_cubes.py
src/2020/day18/: operation_order.py
src/2020/day19/: monster_messages.py
src/2020/day2/: password_philosophy.py  password_philosophy.rs
src/2020/day20/: jurassic_jigsaw.py
src/2020/day3/: tobogan_trajectory.py
src/2020/day4/: passport_processing.py
src/2020/day5/: binary_boarding.py
src/2020/day6/: custom_customs.py
src/2020/day7/: handy_haversacks.py
src/2020/day8/: handheld_halting.py
src/2020/day9/: encoding_error.py
src/utils/: parsing.py
