[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Nathan Painchaud <nathanpainchaud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
structopt = "0.3.13"

[[bin]]
name = "report-repair"
path = "src/2020/day1/report_repair.rs"
